:green_heart: :: Change ci message

--- a/.github/workflows/goms_android_ci.yml
+++ b/.github/workflows/goms_android_ci.yml
@@ -50,7 +50,7 @@ jobs:
           webhook: ${{ secrets.GOMS_DISCORD_WEBHOOK }}
           status: ${{ job.status }}
           image: ${{ secrets.SUCCESS_IMAGE }}
-          description:
+          description: "성공했습니다!"
           color: 00FF00
           url: "https://github.com/sarisia/actions-status-discord"
           username: GOMS CI 봇
@@ -63,7 +63,7 @@ jobs:
           webhook: ${{ secrets.GOMS_DISCORD_WEBHOOK }}
           status: ${{ job.status }}
           image: ${{ secrets.FAILED_IMAGE }}
-          description:
+          description: "성공해서 돌아오겠습니다!"
           color: 00FF00
           url: "https://github.com/sarisia/actions-status-discord"
           username: GOMS CI 봇
