--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,7 +27,7 @@ firebaseBom = "31.2.0"
 firebaseCrashlyticsPlugin = "2.9.2"
 firebasePerfPlugin = "1.4.2"
 gmsPlugin = "4.3.14"
-moshi = "2.9.0"
+gauth = "v1.1.2"
 hilt = "2.48"
 hiltExt = "1.1.0"
 junit4 = "4.13.2"
@@ -38,16 +38,18 @@ kotlinxDateTime = "0.4.0"
 kotlinxSerializationJson = "1.5.1"
 ksp = "1.8.10-1.0.9"
 lint = "31.2.1"
+lifecycle-runtime-ktx = "2.6.2"
 material = "1.2.0-alpha02"
+moshi = "2.9.0"
 okhttp = "4.11.0"
+org-jetbrains-kotlin-android = "1.8.10"
 protobuf = "3.24.0"
 protobufPlugin = "0.9.4"
 retrofit = "2.9.0"
 retrofitKotlinxSerializableJson = "1.0.0"
 room = "2.6.1"
-org-jetbrains-kotlin-android = "1.8.10"
-lifecycle-runtime-ktx = "2.6.2"
-gauth = "v1.1.2"
+turbine = "1.0.0"
+
 
 [libraries]
 #Define Library
@@ -83,6 +85,7 @@ androidx-window-manager = { module = "androidx.window:window", version.ref = "an
 coil-kt = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-kt-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 coil-kt-svg = { group = "io.coil-kt", name = "coil-svg", version.ref = "coil" }
+gauth = { group = "com.github.GSM-MSG", name = "GAuth-Signin-Android", version.ref = "gauth" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
@@ -104,16 +107,16 @@ retrofit-kotlin-serialization = { group = "com.jakewharton.retrofit", name = "re
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
-gauth = { group = "com.github.GSM-MSG", name = "GAuth-Signin-Android", version.ref = "gauth" }
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 
 #Define Dependeicies used in build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 ksp-gradlePlugin = { group = "com.google.devtools.ksp", name = "com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 ui = { group = "androidx.compose.ui", name = "ui" }
 ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
@@ -128,14 +131,14 @@ hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
+protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 
 [bundles]
 #Define Bundles
-kotlinx-coroutines = ["kotlinx-coroutines-android", "kotlinx-coroutines-guava", "kotlinx-coroutines-test"]
-hilt = ["hilt-android", "hilt-android-testing", "hilt-compiler", "hilt-ext-compiler", "hilt-ext-work"]
 compose = ["androidx-activity-compose", "androidx-navigation-compose", "androidx-compose-bom", "coil-kt-compose",
     "androidx-hilt-navigation-compose", "androidx-compose-material3", "androidx-compose-material3-windowSizeClass",
     "androidx-compose-foundation", "androidx-compose-foundation-layout", "androidx-compose-ui-tooling", "androidx-compose-ui-tooling-preview", "androidx-compose-ui-util", "androidx-compose-runtime",
     "androidx-compose-runtime-livedata", "androidx-compose-runtime-tracing"]
+hilt = ["hilt-android", "hilt-android-testing", "hilt-compiler", "hilt-ext-compiler", "hilt-ext-work"]
+kotlinx-coroutines = ["kotlinx-coroutines-android", "kotlinx-coroutines-guava", "kotlinx-coroutines-test"]
