--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 #Define Versions
+accompanist = "0.31.2-alpha"
 androidGradlePlugin = "8.1.4"
 androidxActivity = "1.9.0-alpha01"
 androidxAppCompat = "1.6.1"
@@ -56,6 +57,7 @@ turbine = "1.0.0"
 
 [libraries]
 #Define Library
+accompanist-permission = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
 androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "androidxBrowser" }
