--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,6 +44,7 @@ ksp = "1.8.10-1.0.9"
 lint = "31.2.1"
 lifecycle-runtime-ktx = "2.6.2"
 material = "1.2.0-alpha02"
+mlkit = "17.0.3"
 moshi = "1.15.0"
 okhttp = "4.11.0"
 org-jetbrains-kotlin-android = "1.8.10"
@@ -108,6 +109,7 @@ kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-cor
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDateTime" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 lint-api = { group = "com.android.tools.lint", name = "lint-api", version.ref = "lint" }
+mlkit = { group = "com.google.mlkit", name = "barcode-scanning", version.ref = "mlkit" }
 moshi = { group = "com.squareup.moshi", name = "moshi", version.ref = "moshi" }
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 protobuf-kotlin-lite = { group = "com.google.protobuf", name = "protobuf-kotlin-lite", version.ref = "protobuf" }
