--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,10 +27,12 @@ camera = "1.3.0-beta01"
 cameraRc = "1.3.0-beta01-rc01@aar"
 coil = "2.4.0"
 converter-moshi = "2.9.0"
-firebaseBom = "31.2.0"
+firebaseAnalytics = "21.3.0"
+firebaseBom = "32.2.3"
 firebaseCrashlyticsPlugin = "2.9.2"
+firebaseMessaging = "23.2.1"
 firebasePerfPlugin = "1.4.2"
-gmsPlugin = "4.3.14"
+gmsPlugin = "4.3.15"
 gauth = "v1.1.2"
 hilt = "2.48"
 hiltExt = "1.1.0"
@@ -96,6 +98,9 @@ camera-extensions = { group = "androidx.camera", name = "camera-extensions", ver
 coil-kt = { group = "io.coil-kt", name = "coil", version.ref = "coil" }
 coil-kt-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 coil-kt-svg = { group = "io.coil-kt", name = "coil-svg", version.ref = "coil" }
+firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics-ktx", version.ref = "firebaseAnalytics" }
+firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging-ktx", version.ref = "firebaseMessaging" }
 gauth = { group = "com.github.GSM-MSG", name = "GAuth-Signin-Android", version.ref = "gauth" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
@@ -145,6 +150,7 @@ hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+gms_google_service = { id = "com.google.gms.google-services", version.ref = "gmsPlugin" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 
