--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ androidxTestRunner = "1.5.2"
 androidx-test-ext-junit = "1.1.5"
 androidxWearCompose = "1.2.0"
 androidxWindowManager = "1.2.0"
+appUpdate = "2.1.0"
 camera = "1.3.0-beta01"
 cameraRc = "1.3.0-beta01-rc01@aar"
 coil = "2.4.0"
@@ -38,7 +39,6 @@ gmsPlugin = "4.3.15"
 gauth = "v1.1.2"
 hilt = "2.48"
 hiltExt = "1.1.0"
-inAppUpdate = "2.1.0"
 junit4 = "4.13.2"
 junit = "4.13.2"
 kotlin = "1.8.10"
@@ -101,6 +101,7 @@ androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
 androidx-wear-compose = { group = "androidx.wear.compose", name = "compose-material", version.ref = "androidxWearCompose"}
 androidx-window-manager = { module = "androidx.window:window", version.ref = "androidxWindowManager" }
+app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdate"}
 camera-core =  { group = "androidx.camera", name = "camera-core", version.ref = "camera" }
 camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "camera" }
 camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "cameraRc" }
@@ -119,7 +120,6 @@ hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testi
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-ext-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hiltExt" }
 hilt-ext-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltExt" }
-in-app-update = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "inAppUpdate"}
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 kotlinx-coroutines-guava = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-guava", version.ref = "kotlinxCoroutines" }
