--- a/.github/workflows/goms_android_cd.yml
+++ b/.github/workflows/goms_android_cd.yml
@@ -65,6 +65,7 @@ jobs:
           packageName: com.goms.goms_android_v2
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: production
+          changesNotSentForReview: true
 
       - name: Goms Android CD Discord Notification
         uses: sarisia/actions-status-discord@v1
