--- a/.github/workflows/goms_android_cd.yml
+++ b/.github/workflows/goms_android_cd.yml
@@ -8,21 +8,21 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: master
 
       - name: Setup JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: "zulu"
           java-version: 17
 
       - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
+        uses: android-actions/setup-android@v3
 
       - name: Cache Gradle packages
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
@@ -53,7 +53,7 @@ jobs:
           keyPassword: ${{ secrets.KEY_PASSWORD }}
 
       - name: Upload AAB
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4  # ✅ 최신 버전으로 변경
         with:
           name: app
           path: app/build/outputs/bundle/release/app-release.aab
@@ -65,9 +65,8 @@ jobs:
           packageName: com.goms.goms_android_v2
           releaseFiles: app/build/outputs/bundle/release/app-release.aab
           track: production
-          changesNotSentForReview: true
 
-      - name: Goms Android CD Discord Notification
+      - name: Goms Android CD Discord Notification (Success)
         uses: sarisia/actions-status-discord@v1
         if: ${{ success() }}
         with:
