:recycle: :: edit goms_android_cd.yml

--- a/.github/workflows/goms_android_cd.yml
+++ b/.github/workflows/goms_android_cd.yml
@@ -41,7 +41,7 @@ jobs:
         run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
 
       - name: Assemble Release Bundle
-        run: ./gradlew bundleRelease
+        run: ./gradlew clean bundleRelease --no-build-cache
 
       - name: Sign Release
         uses: r0adkll/sign-android-release@v1
